<resources>
    <string name="app_name">Login</string>
    <string name="login_buttion_label">Login</string>
    <string name="password_hint">Enter Password</string>
    <string name="password_label">Password:</string>
    <string name="username_label">Username:</string>
    <string name="username_hint">Enter Username</string>
    <string name="login_successful_message">Login Successful</string>
    <string name="login_failed_message">Login Failed</string>
</resources>